@@ -30,7 +30,7 @@ export(dba,
        DBA_CONTROL,
        DBA_REPLICATE,
        DBA_INTERVALS,
-       DBA_SN_RATIO,
+       DBA_FRIP,
        DBA_ALL_ATTRIBUTES,
        DBA_OLAP_PEAKS,
        DBA_OLAP_ALL,
