@@ -50,7 +50,7 @@ DBA_CONTROL   = PV_CONTROL
 DBA_READS     = PV_READS
 DBA_REPLICATE = PV_REPLICATE
 DBA_INTERVALS = PV_INTERVALS
-DBA_SN_RATIO  = PV_SN_RATIO
+DBA_FRIP      = PV_SN_RATIO
 DBA_ALL_ATTRIBUTES = c(DBA_ID,DBA_TISSUE,DBA_FACTOR,
                        DBA_CONDITION,DBA_TREATMENT,
                        DBA_REPLICATE,DBA_CALLER)
